[chips] clean up